# DocChat-RAG

./: .gitignore  README.md  pyproject.toml
DocChatRAG/: manage.py
DocChatRAG/DocChatRAG/: asgi.py  settings.py  urls.py  wsgi.py
DocChatRAG/api/: urls.py  views.py
DocChatRAG/chat/: chain.py
DocChatRAG/ingestion/: pipeline.py
DocChatRAG/retrieval/: store.py
